--- a/s.yaml
+++ b/s.yaml
@@ -23,7 +23,8 @@ services:
           - acs:fc:cn-hangzhou:official:layers/Python3-Flask2x/versions/2
           - acs:fc:cn-hangzhou:official:layers/Python39/versions/2
         memorySize: 512
-        timeout: 300
+        cpu: 0.1
+        timeout: 60
         codeUri: ./
         diskSize: 512
         instanceConcurrency: 5
