--- a/s.yaml
+++ b/s.yaml
@@ -4,6 +4,10 @@ access: default
 services:
   framework:
     component: fc
+    actions:       # 自定义执行逻辑，关于actions 的使用，可以参考：https://www.serverless-devs.com/serverless-devs/yaml#行为描述
+      pre-deploy: # 在deploy之前运行
+        - run: pip3 install -r requirements.txt -t .      # 要执行的系统命令，类似于一种钩子的形式
+          path: ./                                    # 执行系统命令/钩子的路径
     props:
       region: cn-hangzhou
       service:
