更新 .gitignore 并移除 __pycache__ 文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 instance/workingtime.db
+
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# VS Code
+.vscode/
+
+# Virtual environment
+venv/
+env/
+ENV/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
