--- a/s.yaml
+++ b/s.yaml
@@ -25,6 +25,7 @@ services:
           PATH: /var/fc/lang/python3.10/bin:/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/code:/code/bin
           PYTHONPATH: /opt/python:/code
           LD_LIBRARY_PATH: /code:/code/lib:/usr/local/lib:/opt/lib
+        initializer: pip install -r requirements-prod.txt
         layers:
           - acs:fc:cn-hangzhou:official:layers/Python3-Flask2x/versions/2
         memorySize: 1024
