--- a/s.yaml
+++ b/s.yaml
@@ -42,7 +42,7 @@ services:
       region: ${vars.region}         # 关于变量的使用方法，可以参考：https://www.serverless-devs.com/serverless-devs/yaml#变量赋值
       service: ${vars.service}
       function:
-        name: "flask-dingding"
+        name: "flask-workingTime"
         description: 'Serverless Devs Web Framework Function'
         codeUri: './code'
         runtime: python3.10
