--- a/s.yaml
+++ b/s.yaml
@@ -36,7 +36,7 @@ services:
     actions:       # 自定义执行逻辑，关于actions 的使用，可以参考：https://www.serverless-devs.com/serverless-devs/yaml#行为描述
       pre-deploy: # 在deploy之前运行
         - run: pip3 install -r requirements.txt -t .      # 要执行的系统命令，类似于一种钩子的形式
-          path: ./code                                   # 执行系统命令/钩子的路径
+          path: ./                                   # 执行系统命令/钩子的路径
 
     props: # 组件的属性值
       region: ${vars.region}         # 关于变量的使用方法，可以参考：https://www.serverless-devs.com/serverless-devs/yaml#变量赋值
@@ -44,7 +44,7 @@ services:
       function:
         name: "flask-workingTime"
         description: 'Serverless Devs Web Framework Function'
-        codeUri: './code'
+        codeUri: './'
         runtime: python3.10
         handler: app.app
         timeout: 60
