adjust s.yaml to let this function can post without setting after

--- a/s.yaml
+++ b/s.yaml
@@ -55,6 +55,7 @@ services:
             authType: anonymous
             methods:
               - GET
+              - POST
       customDomains:
         - domainName: auto
           protocol: HTTP
