--- a/s.yaml
+++ b/s.yaml
@@ -54,8 +54,7 @@ services:
           MYSQL_PORT: ${env.MYSQL_PORT}
           MYSQL_USER: ${env.MYSQL_USER}
           MYSQL_PASSWORD: ${env.MYSQL_PASSWORD}
-          MYSQL_DB: ${env.MYSQL_DB}
-          MYSQL_DATABASE_URL: mysql://${env.MYSQL_USER}:${env.MYSQL_PASSWORD}@${env.MYSQL_HOST}:${env.MYSQL_PORT}/${env.MYSQL_DB}
+          MYSQL_DATABASE: ${env.MYSQL_DATABASE}
       triggers:
         - name: httpTrigger
           type: http
